[package]
name = "daemon_console"
version = "0.2.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Mooling0602 <CleMooling@outlook.com>"]
description = "A flexible console for daemon applications."
repository = "https://github.com/Mooling0602/Daemon_Console_Rust"
homepage = "https://crates.io/crates/daemon_console"
license = "GPL-3.0"
readme = "README.md"
documentation = "https://docs.rs/daemon_console"
keywords = ["console", "daemon", "terminal", "cli"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = [
    "target/",
    ".git/",
    ".gitignore",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.wix]
upgrade-guid = "650695BD-DEA6-4C09-9489-37B4E402378B"
path-guid = "5B30BFC3-C0FC-4690-91DB-E6399D2F8638"
license = false
eula = false

[dependencies]
crossterm = "0.29.0"
unicode-width = "0.2.2"
chrono = "0.4.31"

[lib]
name = "daemon_console"
path = "src/lib.rs"

[[bin]]
name = "daemon_console"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
allow-dirty = ["ci"]

[workspace]
members = ["."]

[workspace.metadata.dist]
allow-dirty = ["ci"]

